# smsggdj-link-esp32

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  MIDI.md  README.md  WIRING.md  config.h  sdkconfig.defaults  sdkconfig.defaults.esp32s3  smsggdj-link-esp32.ino
docs/: index.html  manifest.json
docs/firmware/: .gitkeep
main/: CMakeLists.txt  config.h  idf_component.yml  main.cpp  secrets.h.example
teensy/: README.md
teensy/smsggdj_bridge_teensy/: config.h  midi_proto.h  smsggdj_bridge_teensy.ino
tools/: make-release.sh
